<resources>
    <string name="app_name">LoginRegister</string>
    <string name="welcome">Welcome</string>
    <string name="log_out">Log Out</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password"> password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_an_user_login">Already an user? Login</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? sign Up</string>
    <string name="create_password">Create Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="enter_your_email_address">Enter your email address:</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>


</resources>