<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/white_box"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/black"/>



            <EditText
                android:id="@+id/signupEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="15dp"
                android:hint="@string/email"
                android:padding="8dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/signupPass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/ic_baseline_security_24"
                android:drawablePadding="15dp"
                android:hint="@string/create_password"
                android:padding="8dp"
                android:inputType="textPassword"
                android:textColor="@color/black" />



            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/signup_btn"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:text="@string/sign_up"
                android:backgroundTint="@color/purple_700"
                app:cornerRadius = "20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginReadingText"
                android:layout_gravity="center"
                android:padding="8dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:text="@string/already_an_user_login"
                android:textSize="18sp"/>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>